--- a/package.json
+++ b/package.json
@@ -9,34 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "^6.0.11",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^1.8.4",
-    "expo": "~46.0.8",
-    "expo-device": "~4.3.0",
-    "expo-navigation-bar": "~1.3.0",
-    "expo-splash-screen": "~0.16.1",
-    "expo-status-bar": "~1.4.0",
-    "expo-system-ui": "~1.3.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.4",
-    "react-native-paper": "^4.12.4",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "~0.18.7",
+    "expo": "^51.0.20",
+    "expo-device": "~6.0.2",
+    "expo-navigation-bar": "~3.0.7",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
+    "@types/react": "~18.2.79",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
