--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^1.8.4",
-    "expo": "^51.0.20",
+    "expo": "~51.0.31",
     "expo-device": "~6.0.2",
     "expo-navigation-bar": "~3.0.7",
     "expo-splash-screen": "~0.27.5",
@@ -22,9 +22,9 @@
     "expo-system-ui": "~3.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
